src/editor/components/sidebar/styles.scss
.imajinn-sidebar {
  background: $white;
  border-left: $border-width solid $gray-200;
  bottom: 0;
  color: $gray-900;
  height: 100vh;
  overflow: hidden;
  position: fixed;
  right: 0;
  top: 0;
  width: $sidebar-width;
  z-index: 10000;

  @include break-small() {
	-webkit-overflow-scrolling: touch;
	height: auto;
	overflow: auto;
	top: $admin-bar-height-big + $header-height + 20;

  }

  @include break-medium() {
	top: $admin-bar-height + $header-height + 20;
  }

  @include break-small() {
	display: block;
  }

  > .components-panel {
	border-left: 0;
	border-right: 0;
	margin-bottom: -1px;
	margin-top: -1px;

	> .components-panel__header {
	  background: $gray-200;
	}
  }

  .block-editor-block-inspector__card {
	margin: 0;
  }

  .block-editor-block-inspector h2, .block-editor-block-inspector h3 {
	margin: 0;
  }
}

